-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
Repl 2018-05-07
-
11
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When a transaction commits or aborts, it does not destroy the RecoveryUnit on the OperationContext. That RecoveryUnit still contains the _readAtTimestamp from the transaction. When we profile at the end of the command, we attempt to open the WT snapshot at time _readAtTimestamp. But since the transaction already committed/aborted, that snapshot can be destroyed, and we can get at SnapshotTooOld error. The RecoveryUnit for profiling should not have _readAtTimestamp set.