SERVER-34723 Command profiling should not use transaction read timestamp.

This patch makes abortCurrentTransaction and transaction commit clear out the recovery unit
on the opCtx so no transactional settings are used for any post-transaction writes.